--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .~*
 
 emacs/*
-!emacs/emacs.d/configuration.org
-!emacs/emacs.d/init.el
-!emacs/emacs.d/bin/*
+!emacs/.emacs.d/configuration.org
+!emacs/.emacs.d/init.el
+!emacs/.emacs.d/bin/*n
+!emacs/.emacs.d/snippets/*
