Fixed redshift issues

--- a/config/.config/redshift.conf
+++ b/config/.config/redshift.conf
@@ -1,6 +1,9 @@
 [redshift]
 location-provider=manual
+temp-day=5700
+temp-night=3500
+fade=1
 
 [manual]
 lat=37.733795
-lon=122.446747
+lon=-122.446747
