Changed redshift from a service to being managed by i3

--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -5,6 +5,10 @@
 # this file and re-run i3-config-wizard(1).
 #
 
+# Initiate redshift
+exec --no-startup-id redshift
+
+
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
