--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -4,8 +4,8 @@ Description=Emacs: the extensible, self-documenting text editor
 [Service]
 Type=forking
 ExecStart=/usr/bin/emacs --daemon
-ExecStop=/usr/bin/emacscleint --eval "(kill-emacs)"
-Restart=always
+ExecStop=/usr/bin/emacsclient --eval "(kill-emacs)"
+Restarts=always
 
 [Install]
 WantedBy=default.target
