Add visualizer to mpd

--- a/config/.config/mpd/mpd.conf
+++ b/config/.config/mpd/mpd.conf
@@ -138,7 +138,7 @@ auto_update	"yes"
 # If this setting is set to "yes", MPD will discover audio files by following
 # symbolic links inside of the configured music_directory.
 #
-#follow_inside_symlinks		"yes"
+follow_inside_symlinks		"yes"
 #
 ###############################################################################
 
@@ -203,6 +203,19 @@ input {
 #
 # An example of an ALSA output:
 #
+
+audio_output {
+    type        "pulse"
+    name        "my_pulse"
+}
+
+audio_output {
+    type        "fifo"
+    name        "my_fifo"
+    path        "/tmp/mpd.fifo"
+    format      "44100:16:2"
+}
+
 #audio_output {
 #	type		"alsa"
 #	name		"My ALSA Device"
@@ -376,7 +389,7 @@ input {
 # result in the volume of all playing audio to be adjusted so the output has
 # equal "loudness". This setting is disabled by default.
 #
-#volume_normalization		"no"
+volume_normalization		"yes"
 #
 ###############################################################################
 
