--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -93,12 +93,13 @@ bindsym $mod+f fullscreen
 
 # Move the current focus to scratchpad
 bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Control+minus floating toggle
 
 # Show next scratchpad window or hide focused scratchpad window
 # If there are multiple scratchpad windows, this command cycles through them
 bindsym $mod+minus scratchpad show
 
-# Resize containers
+# Resize conatiners
 mode "resize" {
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
