--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -2,10 +2,9 @@ exec xrdb ~/.Xresources
 
 set $mod Mod4
 
-set $term urxvt
+set $term termite
 set $browser /usr/bin/firefox
 set $lockscreen /usr/local/bin/lockscreen
-# set $lockscreen /usr/bin/swaylock
 set $menu dmenu_path | dmenu | xargs swaymsg exec
 
 gaps inner 10
