--- a/config/.config/i3status/config.toml
+++ b/config/.config/i3status/config.toml
@@ -2,6 +2,11 @@ theme = "solarized-dark"
 icons = "awesome"
 
 [[block]]
+block = "music"
+player = "mpd"
+buttons = ["play", "next"]
+
+[[block]]
 block = "net"
 device = "eno1"
 ip = false
