--- a/config/.config/redshift.conf
+++ b/config/.config/redshift.conf
@@ -3,6 +3,8 @@ location-provider=manual
 temp-day=5700
 temp-night=3500
 fade=1
+dawn-time=06:45-7:30
+dusk-time=22:30-23:00
 
 [manual]
 lat=37.733795
