--- a/config/.config/mpv/mpv.conf
+++ b/config/.config/mpv/mpv.conf
@@ -56,7 +56,7 @@
 # Can cause performance problems with some drivers and GPUs.
 profile=gpu-hq
 interpolation
-tscale=oversample
+#tscale=oversample
 gpu-context=wayland
 log-file=~/videos/mpv.log
 
@@ -69,7 +69,7 @@ video-sync=display-resample
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-hwdec=auto
+# hwdec=auto
 
 
 ##################
@@ -147,3 +147,5 @@ profile=gpu-hq
 input-ipc-server=/tmp/mpvsocket
 hr-seek-framedrop=no
 resume-playback=no
+# hwdec=auto-copy
+# hwdec-codecs=all
