Removed redshift from systemd

--- a/config/.config/systemd/user/redshift.service
+++ b/config/.config/systemd/user/redshift.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Redshift display colour temperature adjustment
 Documentation=http://jonls.dk/redshift
+after=graphical.target
 
 [Service]
 ExecStart=/usr/bin/redshift
