--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -27,7 +27,8 @@ Architecture = auto
 #IgnoreGroup =
 
 #NoUpgrade   =
-#NoExtract   =
+
+NoExtract   = usr/lib/modprobe.d/nvidia-dkms.conf
 
 # Misc options
 #UseSyslog
