--- a/rtorrent/.rtorrent.rc
+++ b/rtorrent/.rtorrent.rc
@@ -32,7 +32,7 @@ network.port_random.set = no
 
 ## Tracker-less torrent and UDP tracker support
 ## (conservative settings for 'private' trackers, change for 'public')
-dht.mode.set = disable
+dht.mode.set = on
 protocol.pex.set = no
 
 trackers.use_udp.set = no
