--- a/etc/mkinitcpio.conf
+++ b/etc/mkinitcpio.conf
@@ -49,7 +49,7 @@ FILES=()
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS=(base udev autodetect modconf block customencrypthook filesystems keyboard fsck usr resume)
+HOOKS=(base udev autodetect modconf block customencrypthook filesystems keyboard fsck usr)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
