--- a/config/.config/mpv/mpv.conf
+++ b/config/.config/mpv/mpv.conf
@@ -55,10 +55,21 @@
 # Specify high quality video rendering preset (for --vo=gpu only)
 # Can cause performance problems with some drivers and GPUs.
 profile=gpu-hq
-interpolation
-#tscale=oversample
-gpu-context=wayland
+
+# Subtitles
+demuxer-mkv-subtitle-preroll=yes
+
+# Screenshots
+screenshot-format=png
+
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
 log-file=~/videos/mpv.log
+
+interpolation
+tscale=oversample
+
+glsl-shaders='~~/shaders/anime4k_adaptive.glsl'
 
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
@@ -69,7 +80,7 @@ video-sync=display-resample
 # video outputs, but should work well with default settings on most systems.
 # If performance or energy usage is an issue, forcing the vdpau or vaapi VOs
 # may or may not help.
-# hwdec=auto
+hwdec=nvdec
 
 
 ##################
@@ -147,5 +158,5 @@ profile=gpu-hq
 input-ipc-server=/tmp/mpvsocket
 hr-seek-framedrop=no
 resume-playback=no
-# hwdec=auto-copy
+hwdec=nvdec-copy
 # hwdec-codecs=all
