--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -108,9 +108,17 @@ exec --no-startup-id redshift
 exec --no-startup-id ckb-next --background
 exec --no-startup-id dunst
 
-bindsym XF86AudioRaiseVolume exec /usr/bin/pulsemixer --change-volume +5
-bindsym XF86AudioLowerVolume exec /usr/bin/pulsemixer --change-volume -5
-bindsym XF86AudioMute        exec /usr/bin/pulsemixer --toggle-mute
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioStop exec playerctl stop
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
 
 Bar {
     position bottom
