--- a/config/.config/mpv/mpv.conf
+++ b/config/.config/mpv/mpv.conf
@@ -71,6 +71,9 @@ tscale=oversample
 
 glsl-shaders='~~/shaders/anime4k_adaptive.glsl'
 
+# Override default aom decoder
+vd=libdav1d
+
 # Force video to lock on the display's refresh rate, and change video and audio
 # speed to some degree to ensure synchronous playback - can cause problems
 # with some drivers and desktop environments.
