--- a/config/.config/compton/compton.conf
+++ b/config/.config/compton/compton.conf
@@ -104,7 +104,7 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-inactive-opacity = 0.75;
+inactive-opacity = 0.85;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -186,7 +186,9 @@ dbe = false;
 unredir-if-possible = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
+focus-exclude = [
+    "name = 'FINAL FANTASY XIV'",
+];
 
 # Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
 detect-transient = true;
