--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -3,6 +3,7 @@ set $mod Mod4
 set $term termite
 set $browser env firefox
 set $menu dmenu_run
+set $lockscreen i3lock -B 10 -k -m --composite --timecolor 00ffffff --datecolor 00ffffff
 
 gaps inner 7
 gaps outer 0
@@ -109,9 +110,9 @@ exec --no-startup-id ckb-next --background
 exec --no-startup-id dunst
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play-pause
