--- a/config/.config/mpd/mpd.conf
+++ b/config/.config/mpd/mpd.conf
@@ -87,7 +87,7 @@ state_file			"~/.mpd/state"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-#port				"6600"
+port				"6600"
 #
 # This setting controls the type of information which is logged. Available
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
@@ -274,17 +274,19 @@ audio_output {
 #
 # An example of a httpd output (built-in HTTP streaming server):
 #
-#audio_output {
-#	type		"httpd"
-#	name		"My HTTP Stream"
-#	encoder		"vorbis"		# optional, vorbis or lame
-#	port		"8000"
-#	bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
-##	quality		"5.0"			# do not define if bitrate is defined
+audio_output {
+	type		"httpd"
+	name		"My HTTP Stream"
+	encoder		"vorbis"		# optional, vorbis or lame
+	port		"8457"
+	bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
+	quality		"5.0"			# do not define if bitrate is defined
 #	bitrate		"128"			# do not define if quality is defined
-#	format		"44100:16:1"
-#	max_clients	"0"			# optional 0=no limit
-#}
+	format		"44100:16:1"
+	max_clients	"0"			# optional 0=no limit
+    always_on   "yes"       # Prevent MPD from disconnecting all listeners when playback is stopped
+    tags        "yes"       # http supports sending tags to listening streams
+}
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
