--- a/config/.config/mpv/mpv.conf
+++ b/config/.config/mpv/mpv.conf
@@ -56,6 +56,8 @@
 # Can cause performance problems with some drivers and GPUs.
 profile=gpu-hq
 
+vo=gpu
+
 # Subtitles
 demuxer-mkv-subtitle-preroll=yes
 
