--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -2,7 +2,7 @@ set $mod Mod4
 
 set $term termite
 set $browser env firefox
-set $menu dmenu_run
+set $menu rofi -show drun
 set $lockscreen i3lock -B 10 -k -m --composite --timecolor 00ffffff --datecolor 00ffffff
 
 gaps inner 7
@@ -19,6 +19,8 @@ default_floating_border none
 ## Key bindings
 # New terminal
 bindsym $mod+Return exec $term
+
+bindsym --release $mod+s exec scrot -s
 
 # Kill focused window
 bindsym $mod+Shift+q kill
