--- a/config/.config/mpd/mpd.conf
+++ b/config/.config/mpd/mpd.conf
@@ -163,7 +163,9 @@ follow_inside_symlinks		"yes"
 # If this setting is set, MPD will require password authorization. The password
 # setting can be specified multiple times for different password profiles.
 #
-#password                        "password@read,add,control,admin"
+# password                        "password@read,add,control,admin"
+password                          "5BV*.Zl=Y#@read,add,control"
+password                          "ZQPF84fj%*?dsSEz@read,add,control,admin"
 #
 # This setting specifies the permissions a user has who has not yet logged in.
 #
