--- a/etc/sbupdate.conf
+++ b/etc/sbupdate.conf
@@ -22,9 +22,7 @@ ESP_DIR="/boot/efi"
 #SPLASH="/usr/share/systemd/bootctl/splash-arch.bmp"
 #BACKUP=1
 #EXTRA_SIGN=()
-CMDLINE_DEFAULT="/vmlinuz-linux-hardened root=/dev/mapper/ssd rootflags=subvol=toplevel/@root apparmor=1 security=apparmor audit=1 rw quiet"
-
-CMDLINE["linux"]="/vmlinuz-linux root=/dev/mapper/ssd rootflags=subvol=toplevel/@root apparmor=1 security=apparmor audit=1 rw quiet"
+CMDLINE_DEFAULT="/vmlinuz-linux root=UUID=82ca2d45-93a3-4b8b-a0cd-75cca1a52d1f rootflags=subvol=toplevel/@root resume=UUID=5475170e-920c-4157-9e7f-048044c0f1f3 resume_offset=34816 apparmor=1 security=apparmor audit=1 rw" #quiet
 
 # Per-kernel configuration
 #
