--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -10,11 +10,13 @@ gaps outer 0
 smart_gaps on
 # smart_borders on
 
+for_window [class=".*"] border pixel 0
+
 font pango: Inconsolata, FontAwesome 14
 
 # default_border pixel normal
 default_floating_border none
-# hide_edge_borders both
+hide_edge_borders smart_no_gaps
 
 ## Key bindings
 # New terminal
