--- a/etc/sbupdate.conf
+++ b/etc/sbupdate.conf
@@ -24,6 +24,7 @@ ESP_DIR="/boot/efi"
 #EXTRA_SIGN=()
 CMDLINE_DEFAULT="/vmlinuz-linux root=UUID=82ca2d45-93a3-4b8b-a0cd-75cca1a52d1f rootflags=subvol=toplevel/@root resume=UUID=5475170e-920c-4157-9e7f-048044c0f1f3 resume_offset=30111744 apparmor=1 security=apparmor audit=1 rw quiet vga=current vt.global_cursor_default=0"
 CMDLINE["linux-zen"]="/vmlinuz-linux-zen root=UUID=82ca2d45-93a3-4b8b-a0cd-75cca1a52d1f rootflags=subvol=toplevel/@root resume=UUID=5475170e-920c-4157-9e7f-048044c0f1f3 resume_offset=30111744 apparmor=1 security=apparmor audit=1 rw quiet vga=current vt.global_cursor_default=0"
+CMDLINE["linux-lts"]="/vmlinuz-linux-lts root=UUID=82ca2d45-93a3-4b8b-a0cd-75cca1a52d1f rootflags=subvol=toplevel/@root resume=UUID=5475170e-920c-4157-9e7f-048044c0f1f3 resume_offset=30111744 apparmor=1 security=apparmor audit=1 rw quiet vga=current vt.global_cursor_default=0 amd_iommu=on iommu=pt"
 
 # Per-kernel configuration
 #
