--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -1,6 +1,6 @@
 set $mod Mod4
 
-set $term termite
+set $term alacritty
 set $browser env firefox
 set $menu rofi -show drun
 set $lockscreen pactl set-sink-mute @DEFAULT_SINK@ on && i3lock -B 10 -k --pass-media-keys --composite --timecolor 00ffffff --datecolor 00ffffff
@@ -22,6 +22,7 @@ hide_edge_borders smart_no_gaps
 # New terminal
 bindsym $mod+Return exec $term
 
+# Take a screenshot
 bindsym --release $mod+s exec scrot -s
 
 # Kill focused window
@@ -109,7 +110,7 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-exec --no-startup-id redshift
+#exec --no-startup-id redshift
 exec --no-startup-id ckb-next --background
 exec --no-startup-id dunst
 exec --no-startup-id discord
