--- a/config/.config/termite/config
+++ b/config/.config/termite/config
@@ -4,7 +4,7 @@
 #bold_is_bright = true
 #clickable_url = true
 #dynamic_title = true
-font = Inconsolata-g 24
+font = MesloLGS NF 24
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
